Fixed bags for comments and cors.